# sujood

./: Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  handlers.rs  mod.rs  setup_tui.rs
src/config/: settings.rs
src/db/: migrations.rs  repository.rs
src/models/: dhikr.rs  mod.rs  prayer.rs  qada.rs  stats.rs
src/prayer_times/: calculator.rs  mod.rs
src/tui/: app.rs  events.rs  mod.rs  theme.rs
src/tui/widgets/: adhkar.rs  header.rs  mod.rs  next_prayer.rs  prayers.rs  qada.rs  quran.rs  statusbar.rs  streak.rs
src/utils/: format.rs  hijri.rs  mod.rs
